Fix T64981: background images do not come along with linked cameras